--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libfm 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-13 04:14+0000\n"
+"POT-Creation-Date: 2010-04-18 02:56+0200\n"
 "PO-Revision-Date: 2010-04-13 20:19+0100\n"
 "Last-Translator: Lutz Thuns <lOtz1009@opensuse.org>\n"
 "Language-Team: German\n"
@@ -184,7 +184,9 @@ msgstr "Vorgänge, die der Besitzer der Datei ausführen kann"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
-msgstr "Vorgänge, die die Benutzer in der gleichen Gruppe wie der Besitzer ausführen können"
+msgstr ""
+"Vorgänge, die die Benutzer in der gleichen Gruppe wie der Besitzer ausführen "
+"können"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -267,15 +269,18 @@ msgid "System Applications"
 msgstr "Installierte Anwendungen"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
-msgstr "Der bevorzugte Email-Client wird zum Verfassen von Nachrichten benutzt, wenn Sie auf E-Mail Adressen klicken."
+msgid ""
+"The preferred Mail Client will be used to compose emails when you click on E-"
+"mail addresses."
+msgstr ""
+"Der bevorzugte Email-Client wird zum Verfassen von Nachrichten benutzt, wenn "
+"Sie auf E-Mail Adressen klicken."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Der bevorzugte Web-Browser wird zum Öffnen von Hyperlinks genutzt."
 
-#: ../src/base/fm-utils.c:54
-#: ../src/base/fm-utils.c:83
+#: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -330,8 +335,7 @@ msgstr "Papierkorb"
 msgid "My Computer"
 msgstr "Mein Computer"
 
-#: ../src/base/fm-path.c:445
-#: ../src/gtk/fm-places-view.c:567
+#: ../src/base/fm-path.c:445 ../src/gtk/fm-places-view.c:567
 msgid "Applications"
 msgstr "Anwendungen"
 
@@ -398,8 +402,11 @@ msgstr "Bitte gültigen Gruppennamen oder numerische ID eingeben."
 
 # Direkte Anrede: Wollen Sie... ????
 #: ../src/gtk/fm-file-properties.c:351
-msgid "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr "Sollen diese Änderungen rekursiv auf alle Dateien und Unterordner angewendet werden?"
+msgid ""
+"Do you want to recursively apply these changes to all files and sub-folders?"
+msgstr ""
+"Sollen diese Änderungen rekursiv auf alle Dateien und Unterordner angewendet "
+"werden?"
 
 #: ../src/gtk/fm-file-properties.c:625
 msgid "Files of different types"
@@ -423,8 +430,7 @@ msgstr "Dateisystem aushängen"
 msgid "Eject Removable Media"
 msgstr "Wechselmedium auswerfen"
 
-#: ../src/gtk/fm-places-view.c:147
-#: ../src/gtk/fm-places-view.c:874
+#: ../src/gtk/fm-places-view.c:147 ../src/gtk/fm-places-view.c:874
 msgid "Rename Bookmark Item"
 msgstr "Lesezeichen umbenennen"
 
@@ -448,8 +454,7 @@ msgstr "Desktop"
 msgid "Enter a new name:"
 msgstr "Neuen Namen eingeben:"
 
-#: ../src/gtk/fm-file-menu.c:83
-#: ../src/gtk/fm-file-menu.c:84
+#: ../src/gtk/fm-file-menu.c:83 ../src/gtk/fm-file-menu.c:84
 msgid "Open With..."
 msgstr "Öffnen mit.."
 
@@ -547,10 +552,8 @@ msgstr "Neuen Namen eingeben:"
 msgid "Are you sure you want to empty the trash bin?"
 msgstr "Sind Sie sicher, dass Sie den Papierkorb leeren möchten?"
 
-#: ../src/job/fm-dir-list-job.c:229
-#: ../src/job/fm-dir-list-job.c:238
+#: ../src/job/fm-dir-list-job.c:229 ../src/job/fm-dir-list-job.c:238
 #: ../src/job/fm-dir-list-job.c:325
 #, c-format
 msgid "The specified directory is not valid"
 msgstr "Das angegebene Verzeichnis ist ungültig"
-
